--- a/application.json
+++ b/application.json
@@ -1,11 +1,9 @@
 {
-  "isPublic": false,
   "viewMode": false,
   "appIsExample": false,
   "unreadCommentThreads": 0,
   "color": "#F1DEFF",
   "icon": "location",
-  "slug": "serialized-stocktake",
   "unpublishedAppLayout": {
     "type": "FLUID"
   },
@@ -13,6 +11,8 @@
     "type": "FLUID"
   },
   "evaluationVersion": 2,
+  "applicationVersion": 1,
+  "isManualUpdate": false,
   "createdAt": {
     "seconds": 1636522034,
     "nanos": 515000000
